--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
 
             <div class="copy-right">
-                <a class="coding-ninja" href="http://">&copy; CodingNinja 2023.</a>
+                <a class="coding-ninja" href="https://linktr.ee/codingninja">&copy; CodingNinja 🥷</a>
             </div>
         </footer>
         
